Update AdSense configuration in env.template and index.html
- Changed the AdSense client ID to a specific value.
- Updated instructions for Ad Slot IDs to clarify the need for creating ad units in the AdSense dashboard.

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=%REACT_APP_ADSENSE_CLIENT_ID%"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6431549888769819"
      crossorigin="anonymous"></script>
     <title>Muvi</title>
   </head>
