Add Google site verification meta tag to index.html for improved SEO compliance

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="películas, series, streaming, cine, trailers, reparto, ver películas online, catálogo películas" />
     <meta name="author" content="Ver Muvi" />
     <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="32Lb33tnqZHvmmklmP_LntpSRYkyq5bvtuBC1pFXdYA" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
