--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <meta name="author" content="Ver Muvi" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="google-site-verification" content="32Lb33tnqZHvmmklmP_LntpSRYkyq5bvtuBC1pFXdYA" />
+    <meta name="google-adsense-account" content="ca-pub-6431549888769819">
     <meta name="googlebot" content="index, follow" />
     <meta name="bingbot" content="index, follow" />
     <meta name="format-detection" content="telephone=no" />
